--- a/html/global.css
+++ b/html/global.css
@@ -6,18 +6,20 @@ html:lang(en_US) * {
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
+body {
+  font-family: Pretendard, "Pretendard JP", "Pretendard Std", -apple-system,
+    system-ui, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica, Arial,
+    "Apple SD Gothic Neo", "Malgun Gothic", "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-* {
-  font-family: Pretendard, "Pretendard JP", "Pretendard Std", -apple-system,
-    system-ui, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica, Arial,
-    "Apple SD Gothic Neo", "Malgun Gothic", "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-}
 
 div {
   display: block;
@@ -67,6 +69,10 @@ button {
   border-image: initial;
 }
 
+button:disabled {
+  color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
+}
+
 p {
   display: block;
   margin-block-start: 1em;
@@ -83,8 +89,6 @@ form {
 label {
   cursor: default;
 }
-
-
 
 input {
   text-rendering: auto;
@@ -112,9 +116,15 @@ input {
 }
 
 button:disabled {
-  background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));
+  background-color: -internal-light-dark(
+    rgba(239, 239, 239, 0.3),
+    rgba(19, 1, 1, 0.3)
+  );
   color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
-  border-color: -internal-light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));
+  border-color: -internal-light-dark(
+    rgba(118, 118, 118, 0.3),
+    rgba(195, 195, 195, 0.3)
+  );
 }
 
 select {
@@ -150,3 +160,15 @@ option {
   padding: 0px 2px 1px;
   white-space: nowrap;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* input[type="password" i] {
+  -webkit-text-security: disc !important;
+  padding-block: 1px;
+  padding-inline: 2px;
+} */
